# docker-checker

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  compose.yml  instruction.txt  pyproject.toml  result.json  startup.sh
backend/: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  pyproject.toml
backend/src/docker_scanner/: app.py  logger.py  main.py  settings.py  testschema.py
backend/src/docker_scanner/routers/: jobs.py
backend/src/docker_scanner/schemas/: docker.py  job.py  job_status.py  trivy.py
backend/src/docker_scanner/services/: docker_service.py  job_service.py  redis_service.py
backend/tests/: test_endpoints.py  test_integration.py  test_services.py  test_settings.py
frontend/: Dockerfile  Makefile  README.md  nginx.conf
frontend/docker_scanner/: .gitignore  README.md  pubspec.yaml
frontend/docker_scanner/android/app/: build.gradle.kts
frontend/docker_scanner/android/app/src/main/: AndroidManifest.xml
frontend/docker_scanner/android/app/src/main/kotlin/com/example/docker_scanner/: MainActivity.kt
frontend/docker_scanner/ios/Runner/: Info.plist
frontend/docker_scanner/ios/Runner.xcodeproj/: project.pbxproj
frontend/docker_scanner/lib/: api_service.dart  consts.dart  docker_container.dart  main.dart  upload_container.dart
frontend/docker_scanner/lib/api/: api_service.dart  models.dart
frontend/docker_scanner/lib/providers/: job_provider.dart
frontend/docker_scanner/lib/widgets/: custom_button.dart  custom_container.dart  job_status_summary.dart  my_button.dart  my_container.dart  my_donut_chart.dart  my_error_box.dart  my_ring_chart.dart  my_row_label.dart  my_scrollable_text.dart  my_table.dart  my_text_form_field.dart  ring_chart_widget.dart
frontend/docker_scanner/linux/: CMakeLists.txt
frontend/docker_scanner/linux/runner/: my_application.cc
frontend/docker_scanner/macos/Runner.xcodeproj/: project.pbxproj
frontend/docker_scanner/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
frontend/docker_scanner/macos/Runner/Configs/: AppInfo.xcconfig
frontend/docker_scanner/test/: widget_test.dart
frontend/docker_scanner/web/: index.html
frontend/docker_scanner/windows/: CMakeLists.txt
frontend/docker_scanner/windows/runner/: Runner.rc  main.cpp
src/: test_api.py
src/app/: main.py  settings.py
src/app/api/: models.py
src/app/core/: settings.py
src/app/routers/: jobs.py
src/app/schemas/: docker.py  job.py  trivy.py
src/app/services/: docker_service.py  interfaces.py  job_service.py
tests/: test_api.py  test_settings.py
